# kivi-json

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/KiviJson/: CMakeLists.txt  KiviJson.cpp  KiviJson.h
test/: CMakeLists.txt  main.cpp
test/src/: tests.cpp
